--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               </ul>
             </div>
             <div class="nav-right">
-              <img src="images/Icon-Menu.svg" alt="humberger" class="menu" />
+              <img src="images/Icon-Menu.svg" alt="menu icon" class="menu" />
             </div>
           </nav>
         </header>
@@ -62,7 +62,13 @@
                 <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
               </li>
               <li>
-                <a href="#"><i><img src="images/m.png" alt="letter a icon" class="letter-m-icon"></i></a>
+                <a href="#"
+                  ><i
+                    ><img
+                      src="images/m.png"
+                      alt="letter a icon"
+                      class="letter-m-icon" /></i
+                ></a>
               </li>
               <li>
                 <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
@@ -81,21 +87,20 @@
                 <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
               </li>
               <li>
-                
                 <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
               </li>
               <li>
                 <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
               </li>
               <li>
-                <a href="#"><img src="images/m.png" alt="m letter icon"></a>
+                <a href="#"><img src="images/m.png" alt="m letter icon" /></a>
               </li>
             </ul>
           </section>
           <img src="images/Action.svg" alt="action" class="action" />
           <div class="my-recent-works">
             <h3>My Recent Works</h3>
-            <img src="images/Indicator.svg" alt="Indicator" />
+            <img src="images/Indicator.svg" alt="Indicator icon" />
           </div>
         </div>
       </div>
@@ -332,14 +337,13 @@
                 <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
               </li>
               <li>
-                
                 <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
               </li>
               <li>
                 <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
               </li>
               <li>
-                <a href="#"><img src="images/m.png" alt="m letter icon"></a>
+                <a href="#"><img src="images/m.png" alt="m letter icon" /></a>
               </li>
             </ul>
           </section>
@@ -352,7 +356,13 @@
                 <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
               </li>
               <li>
-                <a href="#"><i><img src="images/m.png" alt="letter a icon" class="letter-m-icon"></i></a>
+                <a href="#"
+                  ><i
+                    ><img
+                      src="images/m.png"
+                      alt="letter a icon"
+                      class="letter-m-icon" /></i
+                ></a>
               </li>
               <li>
                 <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
