--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>yayner's portfolio home page</title>
+    <title>Yayner's portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -37,13 +37,13 @@
               </ul>
             </div>
             <div class="nav-right">
-              <img src="images/Icon-Menu.svg" alt="humberger" class="menu" />
+              <img src="images/Icon-Menu.svg" alt="menu-icon" class="menu" />
             </div>
           </nav>
         </header>
         <div class="home-content">
           <section class="primary">
-            <h2>Hey there. I’m yayner</h2>
+            <h1>Hey there. I’m yayner</h1>
             <h2 class="software-dev">I’m a software developer</h2>
           </section>
           <section class="supporting">
@@ -62,7 +62,13 @@
                 <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
               </li>
               <li>
-                <a href="#"><i><img src="images/m.png" alt="letter a icon" class="letter-m-icon"></i></a>
+                <a href="#"
+                  ><i
+                    ><img
+                      src="images/m.png"
+                      alt="letter a icon"
+                      class="letter-m-icon" /></i
+                ></a>
               </li>
               <li>
                 <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
@@ -81,21 +87,20 @@
                 <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
               </li>
               <li>
-                
                 <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
               </li>
               <li>
                 <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
               </li>
               <li>
-                <a href="#"><img src="images/m.png" alt="m letter icon"></a>
+                <a href="#"><img src="images/m.png" alt="m letter icon" /></a>
               </li>
             </ul>
           </section>
           <img src="images/Action.svg" alt="action" class="action" />
           <div class="my-recent-works">
             <h3>My Recent Works</h3>
-            <img src="images/Indicator.svg" alt="Indicator" />
+            <img src="images/Indicator.svg" alt="Indicator icon" />
           </div>
         </div>
       </div>
@@ -332,14 +337,13 @@
                 <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
               </li>
               <li>
-                
                 <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
               </li>
               <li>
                 <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
               </li>
               <li>
-                <a href="#"><img src="images/m.png" alt="m letter icon"></a>
+                <a href="#"><img src="images/m.png" alt="m letter icon" /></a>
               </li>
             </ul>
           </section>
@@ -352,7 +356,13 @@
                 <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
               </li>
               <li>
-                <a href="#"><i><img src="images/m.png" alt="letter a icon" class="letter-m-icon"></i></a>
+                <a href="#"
+                  ><i
+                    ><img
+                      src="images/m.png"
+                      alt="letter a icon"
+                      class="letter-m-icon" /></i
+                ></a>
               </li>
               <li>
                 <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
