Add mobile menu

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
                 <li>Contact</li>
               </ul>
             </div>
-            <div class="nav-right">
-              <img src="images/Icon-Menu.svg" alt="humberger" class="menu" />
+            <div class="nav-right menu">
             </div>
           </nav>
         </header>
@@ -333,5 +332,6 @@
         </section>
       </div>
     </div>
+    <script src="script/script.js"></script>
   </body>
 </html>
