--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             </div>
             <div class="nav-middle">
               <ul>
-                <li>Portoflio</li>
-                <li>About</li>
-                <li>Contact</li>
+                <li class="mobile-menu-options"><a href="#Portfolio">Portfolio</a></li>
+                <li class="mobile-menu-options"><a href="#About">About</a></li>
+                <li class="mobile-menu-options"><a href="#Contact">Contact</a></li>
               </ul>
             </div>
             <div class="nav-right menu">
@@ -79,7 +79,7 @@
         </div>
       </div>
       <!-- ------------------mobile version----------- -->
-      <section class="my-works">
+      <section class="my-works" id="Portfolio">
         <section class="works">
           <section class="work-1">
             <div class="img-holder"></div>
@@ -173,7 +173,7 @@
           </section>
         </section>
       </section>
-      <section class="about-me">
+      <section class="about-me" id="About">
         <div class="about-me-text">
           <h2>About me</h2>
           <p>
@@ -226,7 +226,7 @@
       </section>
 
       <!-- -----------end of mobile version------------- -->
-      <div class="contact-container">
+      <div class="contact-container" id="Contact">
         <section class="contact-form">
           <div class="form-flex">
             <section class="contact-me">
