Populate object to html elements when the page loads

--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
             </div>
             <div class="nav-middle">
               <ul>
-                <li class="mobile-menu-options"><a href="#Portfolio">Portfolio</a></li>
+                <li class="mobile-menu-options">
+                  <a href="#Portfolio">Portfolio</a>
+                </li>
                 <li class="mobile-menu-options"><a href="#About">About</a></li>
-                <li class="mobile-menu-options"><a href="#Contact">Contact</a></li>
+                <li class="mobile-menu-options">
+                  <a href="#Contact">Contact</a>
+                </li>
               </ul>
             </div>
-            <div class="nav-right menu">
-            </div>
+            <div class="nav-right menu"></div>
           </nav>
         </header>
         <div class="home-content">
@@ -104,100 +107,11 @@
         </div>
       </div>
       <!-- ------------------mobile version----------- -->
-      <section class="my-works" id="Portfolio">
-        <section class="works">
-          <section class="work-1">
-            <div class="img-holder"></div>
-            <div class="posts">
-              <h2>Multi-Post Stories Gain+Glory</h2>
-              <div class="flex-post">
-                <ul>
-                  <li>Ruby on rails</li>
-                  <li>CSS</li>
-                  <li>Javascript</li>
-                  <li>HTML</li>
-                </ul>
-              </div>
-              <button type="button" class="works-button">See Project</button>
-            </div>
-          </section>
-          <section class="work-2">
-            <div class="img-holder"></div>
-            <div class="posts">
-              <h2>Multi-Post Stories Gain+Glory</h2>
-              <div class="flex-post">
-                <ul>
-                  <li>Ruby on rails</li>
-                  <li>CSS</li>
-                  <li>Javascript</li>
-                  <li>HTML</li>
-                </ul>
-              </div>
-              <button type="button" class="works-button">See Project</button>
-            </div>
-          </section>
-          <section class="work-3">
-            <div class="img-holder"></div>
-            <div class="posts">
-              <h2>Multi-Post Stories Gain+Glory</h2>
-              <div class="flex-post">
-                <ul>
-                  <li>Ruby on rails</li>
-                  <li>CSS</li>
-                  <li>Javascript</li>
-                  <li>HTML</li>
-                </ul>
-              </div>
-              <button type="button" class="works-button">See Project</button>
-            </div>
-          </section>
-          <section class="work-4">
-            <div class="img-holder"></div>
-            <div class="posts">
-              <h2>Multi-Post Stories Gain+Glory</h2>
-              <div class="flex-post">
-                <ul>
-                  <li>Ruby on rails</li>
-                  <li>CSS</li>
-                  <li>Javascript</li>
-                  <li>HTML</li>
-                </ul>
-              </div>
-              <button type="button" class="works-button">See Project</button>
-            </div>
-          </section>
-          <section class="work-5">
-            <div class="img-holder"></div>
-            <div class="posts">
-              <h2>Multi-Post Stories Gain+Glory</h2>
-              <div class="flex-post">
-                <ul>
-                  <li>Ruby on rails</li>
-                  <li>CSS</li>
-                  <li>Javascript</li>
-                  <li>HTML</li>
-                </ul>
-              </div>
-              <button type="button" class="works-button">See Project</button>
-            </div>
-          </section>
-          <section class="work-6">
-            <div class="img-holder"></div>
-            <div class="posts">
-              <h2>Multi-Post Stories Gain+Glory</h2>
-              <div class="flex-post">
-                <ul>
-                  <li>Ruby on rails</li>
-                  <li>CSS</li>
-                  <li>Javascript</li>
-                  <li>HTML</li>
-                </ul>
-              </div>
-              <button type="button" class="works-button">See Project</button>
-            </div>
-          </section>
+      <!-- <section class="my-works" id="Portfolio"> -->
+        <section class="works" id="Portfolio">
+         
         </section>
-      </section>
+      <!-- </section> -->
       <section class="about-me" id="About">
         <div class="about-me-text">
           <h2>About me</h2>
@@ -382,6 +296,8 @@
         </section>
       </div>
     </div>
+    <section class="worksPopup" id="portfolioPopup">
+    </section>
     <script src="script/script.js"></script>
   </body>
 </html>
