--- a/index.html
+++ b/index.html
@@ -108,9 +108,7 @@
       </div>
       <!-- ------------------mobile version----------- -->
       <!-- <section class="my-works" id="Portfolio"> -->
-        <section class="works" id="Portfolio">
-         
-        </section>
+      <section class="works" id="Portfolio"></section>
       <!-- </section> -->
       <section class="about-me" id="About">
         <div class="about-me-text">
@@ -176,16 +174,21 @@
                 </h3>
               </div>
             </section>
-            <form action="https://formspree.io/f/mdobdvyd" method="post">
+            <form
+              action="https://formspree.io/f/mdobdvyd"
+              method="post"
+              id="my-form"
+              class="form"
+            >
               <div class="form-group">
                 <label for="fullname">Full Name</label>
                 <input
                   type="text"
                   placeholder="Full Name"
-                  required
                   name="fullname"
                   maxlength="30"
                   id="fullname"
+                  required
                 />
               </div>
               <div class="first-last-name">
@@ -195,8 +198,8 @@
                     type="text"
                     name="firstname"
                     id="firstname"
-                    required
                     placeholder="First Name"
+                    required
                   />
                 </div>
                 <div class="form-group">
@@ -205,8 +208,8 @@
                     type="text"
                     name="lastname"
                     id="lastname"
-                    required
                     placeholder="Last Name"
+                    required
                   />
                 </div>
               </div>
@@ -216,10 +219,11 @@
                   type="email"
                   name="email"
                   id="email"
-                  required
                   placeholder="Email Address"
+                  class="form-control"
                 />
               </div>
+              <span id="display-error"></span>
               <div class="form-group">
                 <label for="message">Leave A Message</label>
                 <textarea
@@ -232,6 +236,7 @@
                   required
                 ></textarea>
               </div>
+              
               <button type="submit" class="get-in-touch">Get in touch</button>
               <img
                 src="images/Icon-ResizerHandle.svg"
@@ -296,9 +301,7 @@
         </section>
       </div>
     </div>
-    <section class="worksPopup" id="portfolioPopup">
-    </section>
+    <section class="worksPopup" id="portfolioPopup"></section>
     <script src="script/script.js"></script>
   </body>
 </html>
-
