Preserve data function implemented

--- a/index.html
+++ b/index.html
@@ -108,9 +108,7 @@
       </div>
       <!-- ------------------mobile version----------- -->
       <!-- <section class="my-works" id="Portfolio"> -->
-        <section class="works" id="Portfolio">
-         
-        </section>
+      <section class="works" id="Portfolio"></section>
       <!-- </section> -->
       <section class="about-me" id="About">
         <div class="about-me-text">
@@ -176,7 +174,7 @@
                 </h3>
               </div>
             </section>
-            <form action="https://formspree.io/f/mdobdvyd" method="post">
+            <form action="https://formspree.io/f/xzbovozj" method="post">
               <div class="form-group">
                 <label for="fullname">Full Name</label>
                 <input
@@ -296,9 +294,7 @@
         </section>
       </div>
     </div>
-    <section class="worksPopup" id="portfolioPopup">
-    </section>
+    <section class="worksPopup" id="portfolioPopup"></section>
     <script src="script/script.js"></script>
   </body>
 </html>
-
