Add feedback from reviewer

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </h3>
               </div>
             </section>
-            <form action="https://formspree.io/f/xzbovozj" method="post">
+            <form action="https://formspree.io/f/xzbovozj" method="post" class="my-form">
               <div class="form-group">
                 <label for="fullname">Full Name</label>
                 <input
@@ -294,7 +294,7 @@
         </section>
       </div>
     </div>
-    <section class="worksPopup" id="portfolioPopup"></section>
+    <section class="worksPopup close-popup" id="portfolioPopup"></section>
     <script src="script/script.js"></script>
   </body>
 </html>
