Fix the display Error message element

--- a/index.html
+++ b/index.html
@@ -188,7 +188,6 @@
                   name="fullname"
                   maxlength="30"
                   id="fullname"
-                  required
                 />
               </div>
               <div class="first-last-name">
@@ -199,7 +198,6 @@
                     name="firstname"
                     id="firstname"
                     placeholder="First Name"
-                    required
                   />
                 </div>
                 <div class="form-group">
@@ -209,7 +207,6 @@
                     name="lastname"
                     id="lastname"
                     placeholder="Last Name"
-                    required
                   />
                 </div>
               </div>
@@ -233,7 +230,6 @@
                   cols="30"
                   rows="5"
                   maxlength="500"
-                  required
                 ></textarea>
               </div>
               
@@ -301,7 +297,7 @@
         </section>
       </div>
     </div>
-    <section class="worksPopup" id="portfolioPopup"></section>
+    <section class="worksPopup close-popup" id="portfolioPopup"></section>
     <script src="script/script.js"></script>
   </body>
 </html>
