--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
               </div>
             </section>
             <form
-              action="https://formspree.io/f/mdobdvyd"
+              action="https://formspree.io/f/xzbovozj"
               method="post"
               id="my-form"
-              class="form"
+              class="form my-form"
             >
               <div class="form-group">
                 <label for="fullname">Full Name</label>
