--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         </section>
       </div>
     </div>
-    <section class="worksPopup close-popup" id="portfolioPopup"></section>
+    <section class="worksPopup" id="portfolioPopup"></section>
     <script src="script/script.js"></script>
   </body>
 </html>
