--- a/index.html
+++ b/index.html
@@ -1,303 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yayner's portfolio</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&family=Poppins:wght@200;300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
-    />
-  </head>
-  <body>
-    <div class="container">
-      <div class="nav-flex">
-        <header>
-          <nav>
-            <div class="nav-left">
-              <h1 class="welcome"><a href="#">Welcome</a></h1>
-            </div>
-            <div class="nav-middle">
-              <ul>
-                <li class="mobile-menu-options">
-                  <a href="#Portfolio">Portfolio</a>
-                </li>
-                <li class="mobile-menu-options"><a href="#About">About</a></li>
-                <li class="mobile-menu-options">
-                  <a href="#Contact">Contact</a>
-                </li>
-              </ul>
-            </div>
-            <div class="nav-right menu"></div>
-          </nav>
-        </header>
-        <div class="home-content">
-          <section class="primary">
-            <h1>Hey there. I’m yayner</h1>
-            <h2 class="software-dev">I’m a software developer</h2>
-          </section>
-          <section class="supporting">
-            <h3>
-              I can help you build any kind of product,feature or website Look
-              through some of my work and experience! If you like what you see
-              and have a project you need coded, don’t hestiate to contact me.
-            </h3>
-          </section>
-          <section class="social-icons small-screen">
-            <ul>
-              <li>
-                <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><i
-                    ><img
-                      src="images/m.png"
-                      alt="letter a icon"
-                      class="letter-m-icon" /></i
-                ></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
-              </li>
-            </ul>
-          </section>
-          <section class="social-icons desktop-screen">
-            <ul>
-              <li>
-                <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
-              </li>
-              <li>
-                <a href="#"><img src="images/m.png" alt="m letter icon" /></a>
-              </li>
-            </ul>
-          </section>
-          <img src="images/Action.svg" alt="action" class="action" />
-          <div class="my-recent-works">
-            <h3>My Recent Works</h3>
-            <img src="images/Indicator.svg" alt="Indicator icon" />
-          </div>
-        </div>
-      </div>
-      <!-- ------------------mobile version----------- -->
-      <!-- <section class="my-works" id="Portfolio"> -->
-      <section class="works" id="Portfolio"></section>
-      <!-- </section> -->
-      <section class="about-me" id="About">
-        <div class="about-me-text">
-          <h2>About me</h2>
-          <p>
-            I can help you build a product , feature or website Look through
-            some of my work and experience! If you like what you see and have a
-            project you need coded, don’t hestiate to contact me.
-          </p>
-          <button type="button" class="get-resume">Get My Resume</button>
-        </div>
-      </section>
-      <section class="my-knowledge">
-        <section class="languages">
-          <img src="images/lang.svg" alt="languages" />
-          <h2>Languages</h2>
-          <div class="flex-languages">
-            <ul>
-              <li>JavaScript</li>
-              <li>Ruby</li>
-              <li>HTML</li>
-              <li>CSS</li>
-            </ul>
-          </div>
-        </section>
-        <section class="frameworks">
-          <img src="images/frameworks.svg" alt="frameworks" />
-          <h2>Frameworks</h2>
-          <div class="flex-frameworks">
-            <ul>
-              <li>Bootstrap</li>
-              <li>Ruby on Rails</li>
-              <li>RSpec</li>
-              <li>Copybara</li>
-              <li>Selenium</li>
-            </ul>
-          </div>
-        </section>
-        <section class="skills">
-          <img src="images/skills.svg" alt="skills" />
-          <h2>Skills</h2>
-          <div class="flex-skills">
-            <ul>
-              <li>Codekit</li>
-              <li>Github</li>
-              <li>Codepen</li>
-              <li>Gitlab</li>
-              <li>Terminal</li>
-            </ul>
-          </div>
-        </section>
-      </section>
 
-      <!-- -----------end of mobile version------------- -->
-      <div class="contact-container" id="Contact">
-        <section class="contact-form">
-          <div class="form-flex">
-            <section class="contact-me">
-              <div class="contact-me-content">
-                <h3>
-                  I'm always interested in hearing about new projects, so if
-                  you'd like to chat please get in touch.
-                </h3>
-              </div>
-            </section>
-            <form
-              action="https://formspree.io/f/xzbovozj"
-              method="post"
-              id="my-form"
-              class="form my-form"
-            >
-              <div class="form-group">
-                <label for="fullname">Full Name</label>
-                <input
-                  type="text"
-                  placeholder="Full Name"
-                  name="fullname"
-                  maxlength="30"
-                  id="fullname"
-                />
-              </div>
-              <div class="first-last-name">
-                <div class="form-group">
-                  <label for="firstname">First Name</label>
-                  <input
-                    type="text"
-                    name="firstname"
-                    id="firstname"
-                    placeholder="First Name"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="lastname">Last Name</label>
-                  <input
-                    type="text"
-                    name="lastname"
-                    id="lastname"
-                    placeholder="Last Name"
-                  />
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="email">Email Address</label>
-                <input
-                  type="email"
-                  name="email"
-                  id="email"
-                  placeholder="Email Address"
-                  class="form-control"
-                />
-              </div>
-              <span id="display-error"></span>
-              <div class="form-group">
-                <label for="message">Leave A Message</label>
-                <textarea
-                  name="message"
-                  id="message"
-                  placeholder="Enter text here"
-                  cols="30"
-                  rows="5"
-                  maxlength="500"
-                ></textarea>
-              </div>
-              
-              <button type="submit" class="get-in-touch">Get in touch</button>
-              <img
-                src="images/Icon-ResizerHandle.svg"
-                alt="image-resize"
-                class="icon-resize"
-              />
-            </form>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Yayner's portfolio</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&family=Poppins:wght@200;300;400;500;600;700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="nav-flex">
+      <header>
+        <nav>
+          <div class="nav-left">
+            <h1 class="welcome"><a href="#">Welcome</a></h1>
           </div>
-          <hr />
-          <section class="social-icons desktop-screen">
+          <div class="nav-middle">
             <ul>
-              <li>
-                <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
+              <li class="mobile-menu-options">
+                <a href="#Portfolio">Portfolio</a>
               </li>
-              <li>
-                <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
-              </li>
-              <li>
-                <a href="#"><img src="images/m.png" alt="m letter icon" /></a>
+              <li class="mobile-menu-options"><a href="#About">About</a></li>
+              <li class="mobile-menu-options">
+                <a href="#Contact">Contact</a>
               </li>
             </ul>
-          </section>
-          <section class="social-icons small-screen">
-            <ul>
-              <li>
-                <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><i
-                    ><img
-                      src="images/m.png"
-                      alt="letter a icon"
-                      class="letter-m-icon" /></i
-                ></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
-              </li>
-            </ul>
-          </section>
-          <section class="email">
-            <a href="mailto:yayner2002@gmail.com">Yayner2002@gmail.com</a>
-          </section>
-          <img
-            src="images/Shape.svg"
-            alt="contact-shape"
-            class="contact-shape"
-          />
+          </div>
+          <div class="nav-right menu"></div>
+        </nav>
+      </header>
+      <div class="home-content">
+        <section class="primary">
+          <h1>Hey there. I’m yayner</h1>
+          <h2 class="software-dev">I’m a software developer</h2>
         </section>
+        <section class="supporting">
+          <h3>
+            I can help you build any kind of product,feature or website Look
+            through some of my work and experience! If you like what you see
+            and have a project you need coded, don’t hestiate to contact me.
+          </h3>
+        </section>
+        <div class="social-icons small-screen">
+          <ul>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="#"><i><img src="images/m.png" alt="letter a icon" class="letter-m-icon" /></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
+            </li>
+          </ul>
+        </div>
+        <div class="social-icons desktop-screen">
+          <ul>
+            <li>
+              <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/m.png" alt="m letter icon" /></a>
+            </li>
+          </ul>
+        </div>
+        <img src="images/Action.svg" alt="action" class="action" />
+        <div class="my-recent-works">
+          <h3>My Recent Works</h3>
+          <img src="images/Indicator.svg" alt="Indicator icon" />
+        </div>
       </div>
     </div>
-    <section class="worksPopup" id="portfolioPopup"></section>
-    <script src="script/script.js"></script>
-  </body>
+    <div class="works" id="Portfolio"></div>
+    <div class="about-me" id="About">
+      <div class="about-me-text">
+        <h2>About me</h2>
+        <p>
+          I can help you build a product , feature or website Look through
+          some of my work and experience! If you like what you see and have a
+          project you need coded, don’t hestiate to contact me.
+        </p>
+        <button type="button" class="get-resume">Get My Resume</button>
+      </div>
+    </div>
+    <section class="my-knowledge">
+      <div class="languages">
+        <img src="images/lang.svg" alt="languages" />
+        <h2>Languages</h2>
+        <div class="flex-languages">
+          <ul>
+            <li>JavaScript</li>
+            <li>Ruby</li>
+            <li>HTML</li>
+            <li>CSS</li>
+          </ul>
+        </div>
+      </div>
+      <section class="frameworks">
+        <img src="images/frameworks.svg" alt="frameworks" />
+        <h2>Frameworks</h2>
+        <div class="flex-frameworks">
+          <ul>
+            <li>Bootstrap</li>
+            <li>Ruby on Rails</li>
+            <li>RSpec</li>
+            <li>Copybara</li>
+            <li>Selenium</li>
+          </ul>
+        </div>
+      </section>
+      <section class="skills">
+        <img src="images/skills.svg" alt="skills" />
+        <h2>Skills</h2>
+        <div class="flex-skills">
+          <ul>
+            <li>Codekit</li>
+            <li>Github</li>
+            <li>Codepen</li>
+            <li>Gitlab</li>
+            <li>Terminal</li>
+          </ul>
+        </div>
+      </section>
+    </section>
+    <div class="contact-container" id="Contact">
+      <div class="contact-form">
+        <div class="form-flex">
+          <section class="contact-me">
+            <div class="contact-me-content">
+              <h3>
+                I'm always interested in hearing about new projects, so if
+                you'd like to chat please get in touch.
+              </h3>
+            </div>
+          </section>
+          <form action="https://formspree.io/f/xzbovozj" method="post" id="my-form" class="form my-form">
+            <div class="form-group">
+              <label for="fullname">Full Name</label>
+              <input type="text" placeholder="Full Name" name="fullname" maxlength="30" id="fullname" />
+            </div>
+            <div class="first-last-name">
+              <div class="form-group">
+                <label for="firstname">First Name</label>
+                <input type="text" name="firstname" id="firstname" placeholder="First Name" />
+              </div>
+              <div class="form-group">
+                <label for="lastname">Last Name</label>
+                <input type="text" name="lastname" id="lastname" placeholder="Last Name" />
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="email">Email Address</label>
+              <input type="email" name="email" id="email" placeholder="Email Address" class="form-control" />
+            </div>
+            <span id="display-error"></span>
+            <div class="form-group">
+              <label for="message">Leave A Message</label>
+              <textarea name="message" id="message" placeholder="Enter text here" cols="30" rows="5"
+                maxlength="500"></textarea>
+            </div>
+
+            <button type="submit" class="get-in-touch">Get in touch</button>
+            <img src="images/Icon-ResizerHandle.svg" alt="image-resize" class="icon-resize" />
+          </form>
+        </div>
+        <hr />
+        <div class="social-icons desktop-screen">
+          <ul>
+            <li>
+              <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/m.png" alt="m letter icon" /></a>
+            </li>
+          </ul>
+        </div>
+        <div class="social-icons small-screen">
+          <ul>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="#"><i><img src="images/m.png" alt="letter a icon" class="letter-m-icon" /></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
+            </li>
+          </ul>
+        </div>
+        <div class="email">
+          <a href="mailto:yayner2002@gmail.com">Yayner2002@gmail.com</a>
+        </div>
+        <img src="images/Shape.svg" alt="contact-shape" class="contact-shape" />
+      </div>
+    </div>
+  </div>
+  <div class="worksPopup" id="portfolioPopup"></div>
+  <script src="script/script.js"></script>
+</body>
 </html>
