--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
         <div class="social-icons small-screen">
           <ul>
             <li>
-              <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
+              <a href="https://twitter.com/wediagazian"><i class="fa-brands fa-twitter fa-xl"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
+              <a href="https://www.linkedin.com/in/yaynshet-medhin"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
             </li>
             <li>
               <a href="#"><i><img src="images/m.png" alt="letter a icon" class="letter-m-icon" /></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
+              <a href="https://github.com/yayner2002/"><i class="fa-brands fa-github fa-xl"></i></a>
             </li>
             <li>
               <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
@@ -72,16 +72,16 @@
         <div class="social-icons desktop-screen">
           <ul>
             <li>
-              <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
+              <a href="https://github.com/yayner2002/"><i class="fa-brands fa-github fa-xl"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
+              <a href="https://www.linkedin.com/in/yaynshet-medhin"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
             </li>
             <li>
               <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
+              <a href="https://twitter.com/wediagazian"><i class="fa-brands fa-twitter fa-xl"></i></a>
             </li>
             <li>
               <a href="#"><img src="images/m.png" alt="m letter icon" /></a>
@@ -192,16 +192,16 @@
         <div class="social-icons desktop-screen">
           <ul>
             <li>
-              <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
+              <a href="https://github.com/yayner2002/"><i class="fa-brands fa-github fa-xl"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
+              <a href="https://www.linkedin.com/in/yaynshet-medhin"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
             </li>
             <li>
               <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
+              <a href="https://twitter.com/wediagazian"><i class="fa-brands fa-twitter fa-xl"></i></a>
             </li>
             <li>
               <a href="#"><img src="images/m.png" alt="m letter icon" /></a>
@@ -211,16 +211,16 @@
         <div class="social-icons small-screen">
           <ul>
             <li>
-              <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
+              <a href="https://twitter.com/wediagazian"><i class="fa-brands fa-twitter fa-xl"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
+              <a href="https://www.linkedin.com/in/yaynshet-medhin"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
             </li>
             <li>
               <a href="#"><i><img src="images/m.png" alt="letter a icon" class="letter-m-icon" /></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
+              <a href="https://github.com/yayner2002/"><i class="fa-brands fa-github fa-xl"></i></a>
             </li>
             <li>
               <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
