--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <div class="container">
     <div class="nav-flex">
       <header>
+      <div class="container">
         <nav>
           <div class="nav-left">
             <h1 class="welcome"><a href="#">Welcome</a></h1>
@@ -37,6 +38,7 @@
           </div>
           <div class="nav-right menu"></div>
         </nav>
+      </div>
       </header>
       <div class="home-content">
         <section class="primary">
