--- a/index.html
+++ b/index.html
@@ -40,64 +40,68 @@
         </nav>
       </div>
       </header>
-      <div class="home-content">
-        <section class="primary">
-          <h1>Hey there. I’m yayner</h1>
-          <h2 class="software-dev">I’m a software developer</h2>
-        </section>
-        <section class="supporting">
-          <h3>
-            I can help you build any kind of product,feature or website Look
-            through some of my work and experience! If you like what you see
-            and have a project you need coded, don’t hestiate to contact me.
-          </h3>
-        </section>
-        <div class="social-icons small-screen">
-          <ul>
-            <li>
-              <a href="https://twitter.com/wediagazian"><i class="fa-brands fa-twitter fa-xl"></i></a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/yaynshet-medhin"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
-            </li>
-            <li>
-              <a href="#"><i><img src="images/m.png" alt="letter a icon" class="letter-m-icon" /></i></a>
-            </li>
-            <li>
-              <a href="https://github.com/yayner2002/"><i class="fa-brands fa-github fa-xl"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
-            </li>
-          </ul>
-        </div>
-        <div class="social-icons desktop-screen">
-          <ul>
-            <li>
-              <a href="https://github.com/yayner2002/"><i class="fa-brands fa-github fa-xl"></i></a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/yaynshet-medhin"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
-            </li>
-            <li>
-              <a href="https://twitter.com/wediagazian"><i class="fa-brands fa-twitter fa-xl"></i></a>
-            </li>
-            <li>
-              <a href="#"><img src="images/m.png" alt="m letter icon" /></a>
-            </li>
-          </ul>
-        </div>
-        <img src="images/Action.svg" alt="action" class="action" />
-        <div class="my-recent-works">
-          <h3>My Recent Works</h3>
-          <img src="images/Indicator.svg" alt="Indicator icon" />
-        </div>
+      <div class="container">
+        <div class="home-content">  
+          <section class="primary">
+         <h1>Hey there. I’m yayner</h1>
+         <h2 class="software-dev">I’m a software developer</h2>
+          </section>
+       <section class="supporting">
+         <h3>
+           I can help you build any kind of product,feature or website Look
+           through some of my work and experience! If you like what you see
+           and have a project you need coded, don’t hestiate to contact me.
+         </h3>
+       </section>
+         <div class="social-icons small-screen">
+           <ul>
+             <li>
+               <a href="https://twitter.com/wediagazian"><i class="fa-brands fa-twitter fa-xl"></i></a>
+             </li>
+             <li>
+               <a href="https://www.linkedin.com/in/yaynshet-medhin"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
+             </li>
+             <li>
+               <a href="#"><i><img src="images/m.png" alt="letter a icon" class="letter-m-icon" /></i></a>
+             </li>
+             <li>
+               <a href="https://github.com/yayner2002/"><i class="fa-brands fa-github fa-xl"></i></a>
+             </li>
+             <li>
+               <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
+             </li>
+           </ul>
+         </div>
+         <div class="social-icons desktop-screen">
+           <ul>
+             <li>
+               <a href="https://github.com/yayner2002/"><i class="fa-brands fa-github fa-xl"></i></a>
+             </li>
+             <li>
+               <a href="https://www.linkedin.com/in/yaynshet-medhin"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
+             </li>
+             <li>
+               <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
+             </li>
+             <li>
+               <a href="https://twitter.com/wediagazian"><i class="fa-brands fa-twitter fa-xl"></i></a>
+             </li>
+             <li>
+               <a href="#"><img src="images/m.png" alt="m letter icon" /></a>
+             </li>
+           </ul>
+         </div>
+         <img src="images/Action.svg" alt="action" class="action" />
+         <div class="my-recent-works">
+           <h3>My Recent Works</h3>
+           <img src="images/Indicator.svg" alt="Indicator icon" />
+         </div>
+       </div>
       </div>
     </div>
-    <div class="works" id="Portfolio"></div>
+    <div class="container">
+      <div class="works" id="Portfolio"></div>
+    </div>
     <div class="about-me" id="About">
       <div class="about-me-text">
         <h2>About me</h2>
