--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
         </section>
       </section>
     </div>
+  <div class="container">
     <div class="contact-container" id="Contact">
       <div class="contact-form">
         <div class="form-flex">
@@ -242,6 +243,7 @@
         <img src="images/Shape.svg" alt="contact-shape" class="contact-shape" />
       </div>
     </div>
+  </div>
   <div class="worksPopup" id="portfolioPopup"></div>
   <script src="script/script.js"></script>
 </body>
