--- a/index.html
+++ b/index.html
@@ -159,44 +159,46 @@
   <div class="container">
     <div class="contact-container" id="Contact">
       <div class="contact-form">
-        <div class="form-flex">
-          <section class="contact-me">
-            <div class="contact-me-content">
-              <h3>
-                I'm always interested in hearing about new projects, so if
-                you'd like to chat please get in touch.
-              </h3>
-            </div>
-          </section>
-          <form action="https://formspree.io/f/xzbovozj" method="post" id="my-form" class="form my-form">
-            <div class="form-group">
-              <label for="fullname">Full Name</label>
-              <input type="text" placeholder="Full Name" name="fullname" maxlength="30" id="fullname" />
-            </div>
-            <div class="first-last-name">
+        <div class="container">
+          <div class="form-flex">
+            <section class="contact-me">
+              <div class="contact-me-content">
+                <h3>
+                  I'm always interested in hearing about new projects, so if
+                  you'd like to chat please get in touch.
+                </h3>
+              </div>
+            </section>
+            <form action="https://formspree.io/f/xzbovozj" method="post" id="my-form" class="form my-form">
               <div class="form-group">
-                <label for="firstname">First Name</label>
-                <input type="text" name="firstname" id="firstname" placeholder="First Name" />
+                <label for="fullname">Full Name</label>
+                <input type="text" placeholder="Full Name" name="fullname" maxlength="30" id="fullname" />
+              </div>
+              <div class="first-last-name">
+                <div class="form-group">
+                  <label for="firstname">First Name</label>
+                  <input type="text" name="firstname" id="firstname" placeholder="First Name" />
+                </div>
+                <div class="form-group">
+                  <label for="lastname">Last Name</label>
+                  <input type="text" name="lastname" id="lastname" placeholder="Last Name" />
+                </div>
               </div>
               <div class="form-group">
-                <label for="lastname">Last Name</label>
-                <input type="text" name="lastname" id="lastname" placeholder="Last Name" />
+                <label for="email">Email Address</label>
+                <input type="email" name="email" id="email" placeholder="Email Address" class="form-control" />
               </div>
-            </div>
-            <div class="form-group">
-              <label for="email">Email Address</label>
-              <input type="email" name="email" id="email" placeholder="Email Address" class="form-control" />
-            </div>
-            <span id="display-error"></span>
-            <div class="form-group">
-              <label for="message">Leave A Message</label>
-              <textarea name="message" id="message" placeholder="Enter text here" cols="30" rows="5"
-                maxlength="500"></textarea>
-            </div>
-
-            <button type="submit" class="get-in-touch">Get in touch</button>
-            <img src="images/Icon-ResizerHandle.svg" alt="image-resize" class="icon-resize" />
-          </form>
+              <span id="display-error"></span>
+              <div class="form-group">
+                <label for="message">Leave A Message</label>
+                <textarea name="message" id="message" placeholder="Enter text here" cols="30" rows="5"
+                  maxlength="500"></textarea>
+              </div>
+  
+              <button type="submit" class="get-in-touch">Get in touch</button>
+              <img src="images/Icon-ResizerHandle.svg" alt="image-resize" class="icon-resize" />
+            </form>
+          </div>
         </div>
         <hr />
         <div class="social-icons desktop-screen">
