Make the form container work

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </section>
       </section>
     </div>
-  <div class="container">
+  <!-- <div class="container"> -->
     <div class="contact-container" id="Contact">
       <div class="contact-form">
         <div class="container">
@@ -245,7 +245,7 @@
         <img src="images/Shape.svg" alt="contact-shape" class="contact-shape" />
       </div>
     </div>
-  </div>
+  <!-- </div> -->
   <div class="worksPopup" id="portfolioPopup"></div>
   <script src="script/script.js"></script>
 </body>
