Update humbergur menu icon based on issue created by user

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <li class="mobile-menu-options">
                 <a href="#Portfolio">Portfolio</a>
               </li>
-              <li class="mobile-menu-options"><a href="#About">About</a></li>
+              <li class="mobile-menu-options"><a href="#About">About Me</a></li>
               <li class="mobile-menu-options">
                 <a href="#Contact">Contact</a>
               </li>
