Update the frameworks

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
             <ul>
               <li>JavaScript</li>
               <li>Ruby</li>
-              <li>HTML</li>
-              <li>CSS</li>
+              <li>ROR</li>
+              <li>React/Redux</li>
             </ul>
           </div>
         </div>
