Add a link to the action image

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <div class="nav-flex">
-      <header>
+  <div class="nav-flex">
+    <header>
       <div class="container">
         <nav>
           <div class="nav-left">
@@ -27,7 +27,7 @@
           <div class="nav-middle">
             <ul>
               <li class="mobile-menu-options">
-                <a href="#Portfolio">Portfolio</a>
+                <a href="#recentWorks">Portfolio</a>
               </li>
               <li class="mobile-menu-options"><a href="#About">About Me</a></li>
               <li class="mobile-menu-options">
@@ -38,188 +38,20 @@
           <div class="nav-right menu"></div>
         </nav>
       </div>
-      </header>
-      <div class="container">
-        <div class="home-content">  
-          <section class="primary">
-         <h1>Hey there. I’m yayner</h1>
-         <h2 class="software-dev">I’m a software developer</h2>
-          </section>
-       <section class="supporting">
-         <h3>
-           I can help you build any kind of product,feature or website Look
-           through some of my work and experience! If you like what you see
-           and have a project you need coded, don’t hestiate to contact me.
-         </h3>
-       </section>
-         <div class="social-icons small-screen">
-           <ul>
-             <li>
-               <a href="https://twitter.com/wediagazian"><i class="fa-brands fa-twitter fa-xl"></i></a>
-             </li>
-             <li>
-               <a href="https://www.linkedin.com/in/yaynshet-medhin"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
-             </li>
-             <li>
-               <a href="#"><i><img src="images/m.png" alt="letter a icon" class="letter-m-icon" /></i></a>
-             </li>
-             <li>
-               <a href="https://github.com/yayner2002/"><i class="fa-brands fa-github fa-xl"></i></a>
-             </li>
-             <li>
-               <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
-             </li>
-           </ul>
-         </div>
-         <div class="social-icons desktop-screen">
-           <ul>
-             <li>
-               <a href="https://github.com/yayner2002/"><i class="fa-brands fa-github fa-xl"></i></a>
-             </li>
-             <li>
-               <a href="https://www.linkedin.com/in/yaynshet-medhin"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
-             </li>
-             <li>
-               <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
-             </li>
-             <li>
-               <a href="https://twitter.com/wediagazian"><i class="fa-brands fa-twitter fa-xl"></i></a>
-             </li>
-             <li>
-               <a href="#"><img src="images/m.png" alt="m letter icon" /></a>
-             </li>
-           </ul>
-         </div>
-         <img src="images/Action.svg" alt="action" class="action" />
-         <div class="my-recent-works">
-           <h3>My Recent Works</h3>
-           <img src="images/Indicator.svg" alt="Indicator icon" />
-         </div>
-       </div>
-      </div>
-    </div>
+    </header>
     <div class="container">
-      <div class="works" id="Portfolio"></div>
-    </div>
-    <div class="about-me" id="About">
-      <div class="container">
-        <div class="about-me-text">
-          <h2>About me</h2>
-          <p>
-            I can help you build a product , feature or website Look through
-            some of my work and experience! If you like what you see and have a
-            project you need coded, don’t hestiate to contact me.
-          </p>
-          <button type="button" class="get-resume">Get My Resume</button>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <section class="my-knowledge">
-        <div class="languages">
-          <img src="images/lang.svg" alt="languages" />
-          <h2>Languages</h2>
-          <div class="flex-languages">
-            <ul>
-              <li>JavaScript</li>
-              <li>Ruby</li>
-              <li>ROR</li>
-              <li>React/Redux</li>
-            </ul>
-          </div>
-        </div>
-        <section class="frameworks">
-          <img src="images/frameworks.svg" alt="frameworks" />
-          <h2>Frameworks</h2>
-          <div class="flex-frameworks">
-            <ul>
-              <li>Bootstrap</li>
-              <li>Ruby on Rails</li>
-              <li>RSpec</li>
-              <li>Copybara</li>
-              <li>Selenium</li>
-            </ul>
-          </div>
+      <div class="home-content">
+        <section class="primary">
+          <h1>Hey there. I’m yayner</h1>
+          <h2 class="software-dev">I’m a software developer</h2>
         </section>
-        <section class="skills">
-          <img src="images/skills.svg" alt="skills" />
-          <h2>Skills</h2>
-          <div class="flex-skills">
-            <ul>
-              <li>Codekit</li>
-              <li>Github</li>
-              <li>Codepen</li>
-              <li>Gitlab</li>
-              <li>Terminal</li>
-            </ul>
-          </div>
+        <section class="supporting">
+          <h3>
+            I can help you build any kind of product,feature or website Look
+            through some of my work and experience! If you like what you see
+            and have a project you need coded, don’t hestiate to contact me.
+          </h3>
         </section>
-      </section>
-    </div>
-  <!-- <div class="container"> -->
-    <div class="contact-container" id="Contact">
-      <div class="contact-form">
-        <div class="container">
-          <div class="form-flex">
-            <section class="contact-me">
-              <div class="contact-me-content">
-                <h3>
-                  I'm always interested in hearing about new projects, so if
-                  you'd like to chat please get in touch.
-                </h3>
-              </div>
-            </section>
-            <form action="https://formspree.io/f/xzbovozj" method="post" id="my-form" class="form my-form">
-              <div class="form-group">
-                <label for="fullname">Full Name</label>
-                <input type="text" placeholder="Full Name" name="fullname" maxlength="30" id="fullname" />
-              </div>
-              <div class="first-last-name">
-                <div class="form-group">
-                  <label for="firstname">First Name</label>
-                  <input type="text" name="firstname" id="firstname" placeholder="First Name" />
-                </div>
-                <div class="form-group">
-                  <label for="lastname">Last Name</label>
-                  <input type="text" name="lastname" id="lastname" placeholder="Last Name" />
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="email">Email Address</label>
-                <input type="email" name="email" id="email" placeholder="Email Address" class="form-control" />
-              </div>
-              <span id="display-error"></span>
-              <div class="form-group">
-                <label for="message">Leave A Message</label>
-                <textarea name="message" id="message" placeholder="Enter text here" cols="30" rows="5"
-                  maxlength="500"></textarea>
-              </div>
-  
-              <button type="submit" class="get-in-touch">Get in touch</button>
-              <img src="images/Icon-ResizerHandle.svg" alt="image-resize" class="icon-resize" />
-            </form>
-          </div>
-        </div>
-        <hr />
-        <div class="social-icons desktop-screen">
-          <ul>
-            <li>
-              <a href="https://github.com/yayner2002/"><i class="fa-brands fa-github fa-xl"></i></a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/yaynshet-medhin"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
-            </li>
-            <li>
-              <a href="https://twitter.com/wediagazian"><i class="fa-brands fa-twitter fa-xl"></i></a>
-            </li>
-            <li>
-              <a href="#"><img src="images/m.png" alt="m letter icon" /></a>
-            </li>
-          </ul>
-        </div>
         <div class="social-icons small-screen">
           <ul>
             <li>
@@ -239,14 +71,183 @@
             </li>
           </ul>
         </div>
-        <div class="email">
-          <a href="mailto:yayner2002@gmail.com">Yayner2002@gmail.com</a>
+        <div class="social-icons desktop-screen">
+          <ul>
+            <li>
+              <a href="https://github.com/yayner2002/"><i class="fa-brands fa-github fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/yaynshet-medhin"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/wediagazian"><i class="fa-brands fa-twitter fa-xl"></i></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/m.png" alt="m letter icon" /></a>
+            </li>
+          </ul>
         </div>
-        <img src="images/Shape.svg" alt="contact-shape" class="contact-shape" />
+        <a href="#recentWorks"><img src="images/Action.svg" alt="action" class="action" /></a>
+        <div class="my-recent-works" id="recentWorks">
+          <h3>My Recent Works</h3>
+          <img src="images/Indicator.svg" alt="Indicator icon" />
+        </div>
       </div>
     </div>
+  </div>
+  <div class="container">
+    <div class="works" id="Portfolio"></div>
+  </div>
+  <div class="about-me" id="About">
+    <div class="container">
+      <div class="about-me-text">
+        <h2>About me</h2>
+        <p>
+          I can help you build a product , feature or website Look through
+          some of my work and experience! If you like what you see and have a
+          project you need coded, don’t hestiate to contact me.
+        </p>
+        <button type="button" class="get-resume">Get My Resume</button>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <section class="my-knowledge">
+      <div class="languages">
+        <img src="images/lang.svg" alt="languages" />
+        <h2>Languages</h2>
+        <div class="flex-languages">
+          <ul>
+            <li>JavaScript</li>
+            <li>Ruby</li>
+            <li>ROR</li>
+            <li>React/Redux</li>
+          </ul>
+        </div>
+      </div>
+      <section class="frameworks">
+        <img src="images/frameworks.svg" alt="frameworks" />
+        <h2>Frameworks</h2>
+        <div class="flex-frameworks">
+          <ul>
+            <li>Bootstrap</li>
+            <li>Ruby on Rails</li>
+            <li>RSpec</li>
+            <li>Copybara</li>
+            <li>Selenium</li>
+          </ul>
+        </div>
+      </section>
+      <section class="skills">
+        <img src="images/skills.svg" alt="skills" />
+        <h2>Skills</h2>
+        <div class="flex-skills">
+          <ul>
+            <li>Codekit</li>
+            <li>Github</li>
+            <li>Codepen</li>
+            <li>Gitlab</li>
+            <li>Terminal</li>
+          </ul>
+        </div>
+      </section>
+    </section>
+  </div>
+  <!-- <div class="container"> -->
+  <div class="contact-container" id="Contact">
+    <div class="contact-form">
+      <div class="container">
+        <div class="form-flex">
+          <section class="contact-me">
+            <div class="contact-me-content">
+              <h3>
+                I'm always interested in hearing about new projects, so if
+                you'd like to chat please get in touch.
+              </h3>
+            </div>
+          </section>
+          <form action="https://formspree.io/f/xzbovozj" method="post" id="my-form" class="form my-form">
+            <div class="form-group">
+              <label for="fullname">Full Name</label>
+              <input type="text" placeholder="Full Name" name="fullname" maxlength="30" id="fullname" />
+            </div>
+            <div class="first-last-name">
+              <div class="form-group">
+                <label for="firstname">First Name</label>
+                <input type="text" name="firstname" id="firstname" placeholder="First Name" />
+              </div>
+              <div class="form-group">
+                <label for="lastname">Last Name</label>
+                <input type="text" name="lastname" id="lastname" placeholder="Last Name" />
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="email">Email Address</label>
+              <input type="email" name="email" id="email" placeholder="Email Address" class="form-control" />
+            </div>
+            <span id="display-error"></span>
+            <div class="form-group">
+              <label for="message">Leave A Message</label>
+              <textarea name="message" id="message" placeholder="Enter text here" cols="30" rows="5"
+                maxlength="500"></textarea>
+            </div>
+
+            <button type="submit" class="get-in-touch">Get in touch</button>
+            <img src="images/Icon-ResizerHandle.svg" alt="image-resize" class="icon-resize" />
+          </form>
+        </div>
+      </div>
+      <hr />
+      <div class="social-icons desktop-screen">
+        <ul>
+          <li>
+            <a href="https://github.com/yayner2002/"><i class="fa-brands fa-github fa-xl"></i></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/yaynshet-medhin"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/wediagazian"><i class="fa-brands fa-twitter fa-xl"></i></a>
+          </li>
+          <li>
+            <a href="#"><img src="images/m.png" alt="m letter icon" /></a>
+          </li>
+        </ul>
+      </div>
+      <div class="social-icons small-screen">
+        <ul>
+          <li>
+            <a href="https://twitter.com/wediagazian"><i class="fa-brands fa-twitter fa-xl"></i></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/yaynshet-medhin"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
+          </li>
+          <li>
+            <a href="#"><i><img src="images/m.png" alt="letter a icon" class="letter-m-icon" /></i></a>
+          </li>
+          <li>
+            <a href="https://github.com/yayner2002/"><i class="fa-brands fa-github fa-xl"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
+          </li>
+        </ul>
+      </div>
+      <div class="email">
+        <a href="mailto:yayner2002@gmail.com">Yayner2002@gmail.com</a>
+      </div>
+      <img src="images/Shape.svg" alt="contact-shape" class="contact-shape" />
+    </div>
+  </div>
   <!-- </div> -->
   <div class="worksPopup" id="portfolioPopup"></div>
   <script src="script/script.js"></script>
 </body>
+
 </html>
