Add after property to the heading

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           </div>
           <div class="nav-middle">
             <ul>
-              <li class="mobile-menu-options">
-                <a href="#recentWorks">Portfolio</a>
+              <li class="mobile-menu-options active">
+                <a href="#">Portfolio</a>
               </li>
               <li class="mobile-menu-options"><a href="#About">About Me</a></li>
               <li class="mobile-menu-options">
