--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
           <div class="nav-middle">
             <ul>
-              <li class="mobile-menu-options active">
+              <li class="mobile-menu-options">
                 <a href="#">Portfolio</a>
               </li>
               <li class="mobile-menu-options"><a href="#About">About Me</a></li>
