Make the get-resume button download the resume pdf file

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
           some of my work and experience! If you like what you see and have a
           project you need coded, don’t hestiate to contact me.
         </p>
-        <button type="button" class="get-resume">Get My Resume</button>
+        <a href="/images/myResume.pdf" download="yayner's CV" class="get-resume">
+          Get My Resume
+        </a>
       </div>
     </div>
   </div>
