--- a/index.html
+++ b/index.html
@@ -17,28 +17,29 @@
 </head>
 
 <body>
+
+  <header class="my-header">
+    <div class="container">
+      <nav>
+        <div class="nav-left">
+          <h1 class="welcome"><a href="#">Welcome</a></h1>
+        </div>
+        <div class="nav-middle">
+          <ul>
+            <li class="mobile-menu-options">
+              <a href="#">Portfolio</a>
+            </li>
+            <li class="mobile-menu-options"><a href="#About">About Me</a></li>
+            <li class="mobile-menu-options">
+              <a href="#Contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="nav-right menu"></div>
+      </nav>
+    </div>
+  </header>
   <div class="nav-flex">
-    <header>
-      <div class="container">
-        <nav>
-          <div class="nav-left">
-            <h1 class="welcome"><a href="#">Welcome</a></h1>
-          </div>
-          <div class="nav-middle">
-            <ul>
-              <li class="mobile-menu-options">
-                <a href="#">Portfolio</a>
-              </li>
-              <li class="mobile-menu-options"><a href="#About">About Me</a></li>
-              <li class="mobile-menu-options">
-                <a href="#Contact">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <div class="nav-right menu"></div>
-        </nav>
-      </div>
-    </header>
     <div class="container">
       <div class="home-content">
         <section class="primary">
