Adjust the links in the nav

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <div class="nav-middle">
           <ul>
             <li class="mobile-menu-options">
-              <a href="#">Portfolio</a>
+              <a href="/index.html">Portfolio</a>
             </li>
-            <li class="mobile-menu-options"><a href="#About">About Me</a></li>
+            <li class="mobile-menu-options"><a href="/#About">About Me</a></li>
             <li class="mobile-menu-options">
-              <a href="#Contact">Contact</a>
+              <a href="/#Contact">Contact</a>
             </li>
           </ul>
         </div>
