Fix bug in frameworks section

--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
         <div class="flex-languages">
           <ul>
             <li>JavaScript</li>
-            <li>Ruby</li>
-            <li>ROR</li>
-            <li>React/Redux</li>
+            <li>HMTL</li>
+            <li>CSS</li>
+            <li>PHP</li>
           </ul>
         </div>
       </div>
@@ -137,11 +137,10 @@
         <h2>Frameworks</h2>
         <div class="flex-frameworks">
           <ul>
-            <li>Bootstrap</li>
-            <li>Ruby on Rails</li>
-            <li>RSpec</li>
-            <li>Copybara</li>
-            <li>Selenium</li>
+            <li>ReactJs</li>
+            <li>Redux</li>
+            <li>ExpressJs</li>
+            <li>NodeJs</li>
           </ul>
         </div>
       </section>
